# VisualOdometry

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  pyproject.toml
src/: backend.py  config.py  dataset_loader.py  datatypes.py  geometry.py  main.py  tracking.py  vo.py
src/config/: config.py
src/modules/: backend.py  bundle_adjustment.py  dataset_loader.py  feature_matching.py  frontend.py  initialization.py  landmark_management.py  optimizer.py  state_estimation.py  utils.py  vo.py
src/state/: landmark_database.py  vo_state.py
src/utils/: calibrate_camera.py  enums.py  video2frame.py
